# Codebase-Explainer

./: pyproject.toml  test_clone.py  test_extract.py  test_pipeline.py
core_parser/: cloner.py  extractor.py  file_tree.py  models.py  pipeline.py
extension/: background.js  manifest.json  popup.html  popup.js  style.css
output/: metadata.json
parser/: cloner.py  file_tree.py
