[project]
name = "codebase-explainer"
version = "0.1.0"
description = "Architectural map generator for GitHub repos"
authors = [
    {name = "snigdha",email = "snigdhachoudhury2023@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pygit2 (>=1.19.1,<2.0.0)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "tree-sitter-python (>=0.25.0,<0.26.0)",
    "tree-sitter-javascript (>=0.25.0,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.7,<0.16.0)"
]
